# cs487game

./: '  .clang-format  .gitignore  CMakeLists.txt  README.md  \
assets/: world.txt
gamelib/: CMakeLists.txt  gamelib.cpp  gamelib.hpp  gamelib.vcxproj  gamelib.vcxproj.filters  gamelib_action.cpp  gamelib_action.hpp  gamelib_actor.cpp  gamelib_actor.hpp  gamelib_audio.cpp  gamelib_audio.hpp  gamelib_base.hpp  gamelib_command.hpp  gamelib_component.cpp  gamelib_component.hpp  gamelib_context.cpp  gamelib_context.hpp  gamelib_graphics.cpp  gamelib_graphics.hpp  gamelib_input_handler.cpp  gamelib_locator.cpp  gamelib_locator.hpp  gamelib_object.cpp  gamelib_object.hpp  gamelib_world.cpp  gamelib_world.hpp  hatchetfish_log.cpp  hatchetfish_stopwatch.cpp  pch.h
simplegame/: CMakeLists.txt  main.cpp  simplegame  simplegame.vcxproj
